# Shipment_Info_Scraper

./: README.md  main.py  pyproject.toml  requirements.txt  scraper.py
data/: ship_1048956.txt
old-code/: main.py
outputs/: ship_details.xlsx
templates/: index.html
